Project holenav_server {
  database_type: "MongoDB"
}

Table User {
  _id number
  id uuid
  main Character [ref: - Character._id]
  alts Character[] [ref: < Character._id]
  FolderRole FolderRole[] [ref: < FolderRole._id]
  settings UserSettings [ref: - UserSettings._id]
  systemRole SystemRole
  credentials Credentials [ref: - Credentials._id]
}

Table Credentials {
  _id number
  username string
  passwordHash string
}

Table Character {
  _id number
  name string
  esiId string
  accessToken string
  refreshToken string
  isMain boolean
}

Table FolderRole {
  _id number
  role FolderRole
  folder Folder [ref: - Folder._id]
}

Table SsoSession {
  key string
  type SsoSessionType
  expiry Date
  ssoLoginSuccess boolean
  character Character [ref: - Character._id]
  user User [ref: < User._id]
}

Table Folder {
  _id number
  id uuid
  name string
  personal boolean
}

Table System {
  _id number
  id uuid
  name string
  folder Folder [ref: > Folder._id]
}

Table Signature {
  _id number
  id uuid
  eveId string
  name string
  type SigType
  wormholeType string
  eol boolean
  massStatus WhMass
  folder Folder [ref: > Folder._id]
  systemName string
  destinationName string
  reverse Signature [ref: - Signature._id]
  reverseType string
}

Table Session {
  id uuid
  expiresAt Date
  user User [ref: > User._id]
}

Table UserSettings {
  _id number
  maps SavedMap [ref: < SavedMap._id]
  selectedMap SavedMap [ref: - SavedMap._id]
  activeFolder Folder
}

Table SavedMap {
  _id number
  id uuid
  name string
  rootSystemName string
}

Table AppData {
  appVersion string
  motd string
}

enum FolderRole {
  READ
  WRITE
  MANAGE
  ADMIN
}

enum SigType {
  DATA
  RELIC
  GAS
  WORMHOLE
}

enum WhMass {
  STABLE
  DESTAB
  CRIT
}

enum SsoSessionType {
  LOGIN
  ADD_CHARACTER
}

enum SystemRole {
  SOLDIER
  CAPTAIN
  DIRECTOR
}
